    * [S2GRAPH-176] - Fix compile error on LabelMeta
    * [S2GRAPH-179] - Add defaultValue on ColumnMeta
    * [S2GRAPH-178] - Fix null pointer error on BulkLoader
    * [S2GRAPH-181] - MutateVertices yield different state with different storage type
    * [S2GRAPH-184] - spark driver exit abnormally in the loader of s2jobs
    * [S2GRAPH-186] - fix wrong escaping of double quotation marks

** Improvement
    * [S2GRAPH-72] - Support Apache TinkerPop and Gremlin
    * [S2GRAPH-121] - Create `Result` class to hold traverse result edges.
    * [S2GRAPH-122] - Change data types of Edge/IndexEdge/SnapshotEdge.
    * [S2GRAPH-132] - Support buffering for 'Increment RPC'
    * [S2GRAPH-133] - Deprecating Vagrant environment.
    * [S2GRAPH-135] - Change the way LabelIndexOption is implemented and improve it
    * [S2GRAPH-165] - Add TinkerPop support documentation on README
    * [S2GRAPH-167] - Provide Vertex CSV File BulkLoad
    * [S2GRAPH-169] - Separate multiple functionalities on Storage class into multiple Interface.
    * [S2GRAPH-170] - Create Interface for S2Edge/S2Vertex/S2Graph.
    * [S2GRAPH-182] - Version up spark dependencies.

** New Feature
    * [S2GRAPH-123] - Support different index on out/in direction.
    * [S2GRAPH-125] - Add options field on Label model for controlling advanced options.
    * [S2GRAPH-166] - Provide embeddable storage backend using RocksDB.
    * [S2GRAPH-175] - Provide Elastic Search Index Provider.
    * [S2GRAPH-172] - Suggest to implement GraphQL as standard web interface for S2Graph.
    * [S2GRAPH-177] - Add support for createServiceColumn/addVertex APIs on GraphQL.

** Task
    * [S2GRAPH-162] - Update year in the NOTICE file.

Release 0.1.0 - Released

  NEW FEATURES

    S2GRAPH-34: Provide option to select which field in edge's properties to run timeDecay function (Committed by DOYUNG YOON).

    S2GRAPH-35: Provide normalize option on query (Committed by DOYUNG YOON).
