@@ -1,1 +1,0 @@
-../../conf/log4j.properties
